--- a/produtos.css
+++ b/produtos.css
@@ -1,5 +1,18 @@
 header {
 	background: #BBBBBB;
+	padding: 20 px 0 0;
+}
+
+.caixa {
+	position: relative;
+	width: 940px;
+	margin: 0 auto;
+}
+
+nav {
+	position: absolute;
+	top: 110px;
+	right: 0;
 }
 
 nav li {
