--- a/produtos.css
+++ b/produtos.css
@@ -26,6 +26,12 @@ nav a {
 	font-weight: bold;
 	font-size: 22px;
 	text-decoration: none;
+
+}
+
+nav a:hover {
+	color:  #C78C19;
+	text-decoration: underline;
 }
 
 .produtos {
@@ -45,6 +51,18 @@ nav a {
 	border: 2px solid #000000;
 	border-radius: 10px;
 
+}
+
+.produtos li:hover {
+	border-color: #C78C19;
+}
+
+.produtos li:active {
+	border-color: #088C19;
+}
+
+.produtos li:hover h2 {
+	font-size: 34px;
 }
 
 .produtos h2 {
