--- a/produtos.css
+++ b/produtos.css
@@ -79,3 +79,15 @@ nav a:hover {
 	font-weight: bold;
 	margin-top: 10px;
 }
+
+footer {
+	text-align: center;
+	background: URL("f3.jpg");
+	padding: 40px 40px 0;
+}
+
+.copyright {
+	color: #FFFFFF;
+	font-size: 13px;
+	margin: 20px 0 0;
+}
