--- a/style.css
+++ b/style.css
@@ -80,6 +80,28 @@ nav a:hover {
 	margin-top: 10px;
 }
 
+main {
+	width: 940px;
+	margin: 0 auto;
+}
+
+form {
+	margin: 40px 0;
+}
+
+form label {
+	display: block;
+	font-size: 20px;
+	margin: 0 0 10px;
+}
+
+form input {
+	display: block;
+	margin: 0 0 20px;
+	padding: 10px 25px;
+	width: 50%;
+}
+
 footer {
 	text-align: center;
 	background: URL("f3.jpg");
@@ -91,3 +113,4 @@ footer {
 	font-size: 13px;
 	margin: 20px 0 0;
 }
+
