--- a/style.css
+++ b/style.css
@@ -89,13 +89,13 @@ form {
 	margin: 40px 0;
 }
 
-form label {
+form label, form p {
 	display: block;
 	font-size: 20px;
 	margin: 0 0 10px;
 }
 
-form input {
+.input-padrao {
 	display: block;
 	margin: 0 0 20px;
 	padding: 10px 25px;
@@ -112,5 +112,9 @@ footer {
 	color: #FFFFFF;
 	font-size: 13px;
 	margin: 20px 0 0;
+}
+
+.checkbox {
+	margin: 20px 0;
 }
 
