--- a/style.css
+++ b/style.css
@@ -118,3 +118,22 @@ footer {
 	margin: 20px 0;
 }
 
+.enviar {
+	width: 40%;
+	padding: 15px 0;
+	background: darkred;
+	color: white;
+	font-weight: bold;
+	font-size: 18px;
+	border: none;
+	border-radius: 5px;
+	transition: 1s all;
+	cursor: pointer;
+}
+
+.enviar:hover{
+	background: red;
+	transform: scale(1.2);
+}
+
+
