--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ nav {
 
 nav li {
 	display: inline;
-	margin: 0 0 15px;
+	margin: 0 0 0 15px;
 }
 
 nav a {
@@ -237,10 +237,84 @@ td, th {
 
 .imagem-beneficios{
 	width: 60%;
+	opacity: 1;
+	transition: 400ms;
+	box-shadow: 10px 10px 10px #000000;
+}
+
+.imagem-beneficios:hover{
+	opacity: 0.4;
 }
 
 
 .video{
 	width: 560px;
 	margin: 2em auto;
+}
+
+
+@media screen and (min-device-width: 389px) and (max-device-width: 481px) {
+    .principal, .conteudo-beneficios, .mapa-conteudo, .video {
+        width: 95%;
+    }
+
+    .caixa {
+        width: 85%;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    nav {
+        position: static;
+        text-align: center;
+    }
+
+    nav a {
+        font-size: 19px;
+    }
+
+    .lista-beneficios, .imagem-beneficios {
+        width: 100%;
+    }
+
+    .produtos, .produtos li {
+        display:  inline-block;
+        width: 90%;
+        padding: 5px 5px;
+        margin: 10px 10px;
+        
+    }
+
+    .input-padrao {
+        width: 80%;
+    }
+
+    .enviar {
+        width:70%;
+    }
+}
+
+@media screen and (min-device-width: 482px) and (max-device-width: 850px) {
+
+    header {
+        margin-right: 0;
+    }
+
+
+    .input-padrao {
+        width: 90%;
+    }
+
+    .caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video {
+        width: 95%;
+    }
+
+    .produtos, .produtos li {
+        display:  inline-block;
+        width: 90%;
+        padding: 5px 5px;
+        margin: 10px 10px;
+    }
 }
